--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/bearer": "^0.7.0",
+    "@elysiajs/cookie": "^0.7.0",
+    "@elysiajs/cors": "^0.7.2",
+    "@elysiajs/jwt": "^0.7.0",
+    "@elysiajs/swagger": "^0.7.4",
+    "elysia": "latest",
+    "mongoose": "^8.0.0"
   },
   "devDependencies": {
     "bun-types": "latest"
