--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "api",
-  "version": "1.0.50",
+  "name": "rally-api",
+  "version": "0.0.1",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch app/server.ts"
   },
   "dependencies": {
     "@elysiajs/bearer": "^0.7.0",
