--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rally-api",
   "version": "0.0.1",
   "scripts": {
-    "dev": "bun run --watch app/server.ts"
+    "dev": "bun run --watch src/server.ts"
   },
   "dependencies": {
     "@elysiajs/bearer": "^0.7.0",
