--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "dev": "bun run --watch src/server.ts"
   },
   "dependencies": {
-    "@elysiajs/bearer": "^0.7.0",
-    "@elysiajs/cookie": "^0.7.0",
-    "@elysiajs/cors": "^0.7.2",
-    "@elysiajs/jwt": "^0.7.0",
-    "@elysiajs/swagger": "^0.7.4",
-    "elysia": "latest",
-    "mongoose": "^8.0.0"
+    "@elysiajs/bearer": "^0.8.0",
+    "@elysiajs/cookie": "^0.8.0",
+    "@elysiajs/cors": "^0.8.0",
+    "@elysiajs/jwt": "^0.8.0",
+    "@elysiajs/swagger": "^0.8.5",
+    "elysia": "^0.8.15",
+    "mongoose": "^8.1.1"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "^1.0.25"
   },
   "module": "src/index.js"
 }
